[package]
name = "minimal_sinsemilla"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pasta_curves = { version = "0.3", default-features=false, features=["alloc"] }
group = { version = "0.11", default-features = false }
subtle = { version = "2.3", default-features = false }

[features]
default = ["precomputed-table"]
precomputed-table = []
