[package]
name = "minimal_sinsemilla"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
group = { version = "0.11", default-features = false }
subtle = { version = "2.3", default-features = false }

#pasta_curves = { version = "0.3", default-features=false, features=["alloc"] }
#pasta_curves = { path = "/home/agi/code/pasta_curves", default-features = false }
[dependencies.pasta_curves]
git = "https://github.com/jarys/pasta_curves"
branch = "unboxed-closures"
default-features = false
features = ["unboxed_closures"]

[features]
default = ["precomputed-table"]
precomputed-table = []
